deployment-fitness.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-fitness
  namespace: chandana-ns
  
spec:
  replicas: 1 
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: fit
  template:
    metadata:
      labels: 
        app: fit
    spec: 
      containers:
        - name: fitness-container
          image: muralisocial123/fitness-app:v1.0.1
          ports: 
            - containerPort: 5001
          resources:
            requests: 
              memory: "128Mi"
              cpu: "50m"
            limits: 
              memory: "256Mi"
              cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: fitness-ser
  namespace: chandana-ns
spec:
  selector:
    app: fit
  ports:
  - port: 5001
    targetPort: 5000
  type: ClusterIP
