deployment-flipkart-clone.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-flipkart
  namespace: chandana-ns

spec:
  replicas: 1 
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: flip
  template:
    metadata:
      labels: 
        app: flip
    spec: 
      containers:
      - name: flip-container
        image: muralisocial123/flipkart-clone-kuberox:v1.1.0
        ports: 
        - containerPort: 81
        resources:
          requests: 
            memory: "128Mi"
            cpu: "50m"
          limits: 
            memory: "256Mi"
            cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: flip-ser
  namespace: chandana-ns
spec:
  selector:
    app: flip
  ports:
  - port: 81
    targetPort: 80
  type: ClusterIP
