deployment-kendrl-flower.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-flower
  namespace: chandana-ns

spec:
  replicas: 1 
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: flower
  template:
    metadata:
      labels: 
        app: flower
    spec: 
      containers:
        - name: flower-container
          image: muralisocial123/kyndrl-flower-app:v1.1.0
          ports: 
            - containerPort: 3016
          resources:
            requests: 
              memory: "128Mi"
              cpu: "50m"
            limits: 
              memory: "256Mi"
              cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: flower-ser
  namespace: chandana-ns
spec:
  selector:
    app: flower
  ports:
  - port: 3016
    targetPort: 3015
  type: ClusterIP
