eycart-routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ey-rt
  namespace: chandana-ns

spec:
  parentRefs:
    - name: kgateway1
  rules: #path based routing
    - matches:
      - path:
          type: PathPrefix
          value: /ey
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /ey
      backendRefs:
        - name: ey-ser
          port: 3000
