flower-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flower-rt
  namespace: chandana-ns

spec:
  parentRefs:
    - name: kgateway1
  rules: #path based routing
    - matches:
      - path:
          type: PathPrefix
          value: /flower
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /flower
      backendRefs:
        - name: flower-ser
          port: 3015
